--- a/package.json
+++ b/package.json
@@ -198,9 +198,10 @@
     "yallist": "^4.0.0"
   },
   "type": "module",
-  "scripts": {
-    "start": "nodemon server.js"
-  },
+ "scripts": {
+  "start": "node server.js",
+  "dev": "nodemon server.js"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
