--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "call-bind": "^1.0.7",
     "chokidar": "^3.6.0",
     "chownr": "^2.0.0",
-    "cloudinary": "^2.5.1",
+    "cloudinary": "1.30.0",
     "color-support": "^1.1.3",
     "concat-map": "^0.0.1",
     "console-control-strings": "^1.1.0",
@@ -198,10 +198,10 @@
     "yallist": "^4.0.0"
   },
   "type": "module",
- "scripts": {
-  "start": "node server.js",
-  "dev": "nodemon server.js"
-},
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
