--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "buffer-equal-constant-time": "^1.0.1",
     "bytes": "^3.1.2",
     "call-bind": "^1.0.7",
+    "chalk": "^5.4.1",
     "chokidar": "^3.6.0",
     "chownr": "^2.0.0",
     "cloudinary": "1.30.0",
@@ -125,7 +126,6 @@
     "node-addon-api": "^5.1.0",
     "node-fetch": "^2.7.0",
     "nodemailer": "^7.0.3",
-    "nodemon": "^3.1.7",
     "nopt": "^5.0.0",
     "normalize-path": "^3.0.0",
     "npmlog": "^5.0.1",
@@ -170,8 +170,8 @@
     "sparse-bitfield": "^3.0.3",
     "sprintf-js": "^1.1.3",
     "statuses": "^2.0.1",
-    "string-width": "^4.2.3",
     "string_decoder": "^1.3.0",
+    "string-width": "^4.2.3",
     "strip-ansi": "^6.0.1",
     "stripe": "^17.4.0",
     "strnum": "^1.0.5",
@@ -205,5 +205,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  }
 }
