--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "api",
-  "vers ion": "1.0.0",
+  "version": "1.0.0",
   "main": "server.js",
   "dependencies": {
     "abbrev": "^1.1.1",
@@ -124,8 +124,9 @@
     "nanoid": "^3.3.8",
     "negotiator": "^0.6.3",
     "node-addon-api": "^5.1.0",
+    "node-cron": "^4.1.1",
     "node-fetch": "^2.7.0",
-    "nodemailer": "^7.0.3",
+    "nodemailer": "^7.0.5",
     "nopt": "^5.0.0",
     "normalize-path": "^3.0.0",
     "npmlog": "^5.0.1",
@@ -170,8 +171,9 @@
     "sparse-bitfield": "^3.0.3",
     "sprintf-js": "^1.1.3",
     "statuses": "^2.0.1",
-    "string_decoder": "^1.3.0",
+    "streamifier": "^0.1.1",
     "string-width": "^4.2.3",
+    "string_decoder": "^1.3.0",
     "strip-ansi": "^6.0.1",
     "stripe": "^17.4.0",
     "strnum": "^1.0.5",
@@ -195,6 +197,7 @@
     "whatwg-url": "^13.0.0",
     "wide-align": "^1.1.5",
     "wrappy": "^1.0.2",
+    "xendit-node": "^7.0.0",
     "yallist": "^4.0.0"
   },
   "type": "module",
