--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "server.js",
   "dependencies": {
+    "@xenova/transformers": "^2.17.2",
     "abbrev": "^1.1.1",
     "accepts": "^1.3.8",
     "agent-base": "^6.0.2",
@@ -28,6 +29,7 @@
     "cloudinary": "1.30.0",
     "color-support": "^1.1.3",
     "concat-map": "^0.0.1",
+    "concurrently": "^9.2.1",
     "console-control-strings": "^1.1.0",
     "content-disposition": "^0.5.4",
     "content-type": "^1.0.5",
@@ -61,6 +63,7 @@
     "fs-minipass": "^2.1.0",
     "fs.realpath": "^1.0.0",
     "function-bind": "^1.1.2",
+    "fuse.js": "^7.1.0",
     "gauge": "^3.0.2",
     "get-intrinsic": "^1.2.4",
     "glob": "^7.2.3",
@@ -114,7 +117,7 @@
     "mkdirp": "^1.0.4",
     "mongodb": "^6.11.0",
     "mongodb-connection-string-url": "^3.0.1",
-    "mongoose": "^8.9.3",
+    "mongoose": "^8.18.2",
     "mongose": "^0.0.2-security",
     "mpath": "^0.9.0",
     "mquery": "^5.0.0",
@@ -134,6 +137,7 @@
     "object-inspect": "^1.13.3",
     "on-finished": "^2.4.1",
     "once": "^1.4.0",
+    "openai": "^5.23.0",
     "parseurl": "^1.3.3",
     "path-is-absolute": "^1.0.1",
     "path-to-regexp": "^0.1.10",
@@ -172,8 +176,8 @@
     "sprintf-js": "^1.1.3",
     "statuses": "^2.0.1",
     "streamifier": "^0.1.1",
-    "string-width": "^4.2.3",
     "string_decoder": "^1.3.0",
+    "string-width": "^4.2.3",
     "strip-ansi": "^6.0.1",
     "stripe": "^17.4.0",
     "strnum": "^1.0.5",
@@ -203,7 +207,9 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start:worker": "node worker.js",
+    "start:all": "concurrently \"npm run start\" \"npm run start:worker\"",
+    "dev": "concurrently \"nodemon server.js\" \"nodemon worker.js\""
   },
   "keywords": [],
   "author": "",
