--- a/package.json
+++ b/package.json
@@ -209,13 +209,28 @@
     "start": "node server.js",
     "start:worker": "node worker.js",
     "start:all": "concurrently \"npm run start\" \"npm run start:worker\"",
-    "dev": "concurrently \"nodemon server.js\" \"nodemon worker.js\""
+    "dev": "concurrently \"nodemon server.js\" \"nodemon worker.js\"",
+    "test": "jest",
+    "test:coverage": "jest --coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
+    "jest": "^30.2.0",
     "nodemon": "^3.1.10"
+  },
+  "jest": {
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+       "controllers/auth.controller.js",
+      "controllers/auth.controller.test.js", 
+      "!server.js",
+      "!worker.js",
+      "!**/node_modules/**"
+    ]
   }
 }
