--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "bcrypt": "^5.1.1",
     "binary-extensions": "^2.3.0",
     "body-parser": "^1.20.3",
-    "bowser": "^2.11.0",
+    "bowser": "^2.12.1",
     "brace-expansion": "^1.1.11",
     "braces": "^3.0.3",
     "bson": "^6.10.0",
@@ -26,7 +26,7 @@
     "chalk": "^5.4.1",
     "chokidar": "^3.6.0",
     "chownr": "^2.0.0",
-    "cloudinary": "1.30.0",
+    "cloudinary": "^1.41.3",
     "color-support": "^1.1.3",
     "concat-map": "^0.0.1",
     "concurrently": "^9.2.1",
@@ -44,14 +44,13 @@
     "depd": "^2.0.0",
     "destroy": "^1.2.0",
     "detect-libc": "^2.0.3",
-    "dotenv": "^16.4.7",
+    "dotenv": "^17.2.3",
     "ecdsa-sig-formatter": "^1.0.11",
     "ee-first": "^1.1.1",
     "emoji-regex": "^8.0.0",
     "encodeurl": "^2.0.0",
     "es-define-property": "^1.0.0",
     "es-errors": "^1.3.0",
-    "esbuild": "^0.24.0",
     "escape-html": "^1.0.3",
     "etag": "^1.8.1",
     "express": "^4.21.2",
@@ -89,7 +88,7 @@
     "is-fullwidth-code-point": "^3.0.0",
     "is-glob": "^4.0.3",
     "is-number": "^7.0.0",
-    "joi": "^17.13.3",
+    "joi": "^18.0.1",
     "jsbn": "^1.1.0",
     "jsonwebtoken": "^9.0.2",
     "jwa": "^1.4.1",
@@ -115,9 +114,9 @@
     "minipass": "^3.3.6",
     "minizlib": "^2.1.2",
     "mkdirp": "^1.0.4",
-    "mongodb": "^6.11.0",
+    "mongodb": "^6.21.0",
     "mongodb-connection-string-url": "^3.0.1",
-    "mongoose": "^8.18.2",
+    "mongoose": "^8.20.0",
     "mongose": "^0.0.2-security",
     "mpath": "^0.9.0",
     "mquery": "^5.0.0",
@@ -147,7 +146,7 @@
     "proxy-addr": "^2.0.7",
     "pstree.remy": "^1.1.8",
     "punycode": "^2.3.1",
-    "qs": "^6.13.0",
+    "qs": "^6.14.0",
     "range-parser": "^1.2.1",
     "raw-body": "^2.5.2",
     "react-phone-input-2": "^2.15.1",
@@ -209,9 +208,7 @@
     "start": "node server.js",
     "start:worker": "node worker.js",
     "start:all": "concurrently \"npm run start\" \"npm run start:worker\"",
-    "dev": "concurrently \"nodemon server.js\" \"nodemon worker.js\"",
-    "test": "jest",
-    "test:coverage": "jest --coverage"
+    "dev": "concurrently \"nodemon server.js\" \"nodemon worker.js\""
   },
   "keywords": [],
   "author": "",
@@ -220,17 +217,7 @@
   "devDependencies": {
     "@babel/core": "^7.28.5",
     "@babel/preset-env": "^7.28.5",
-    "jest": "^30.2.0",
-    "nodemon": "^3.1.10"
-  },
-  "jest": {
-    "collectCoverage": true,
-    "collectCoverageFrom": [
-       "controllers/auth.controller.js",
-      "controllers/auth.controller.test.js", 
-      "!server.js",
-      "!worker.js",
-      "!**/node_modules/**"
-    ]
+    "esbuild": "^0.26.0",
+    "nodemon": "^3.1.11"
   }
 }
